[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "configfy_build"
version = "0.0.1"
authors = [
  { name="HSC" },
]
description = "A configurable build helper"
readme = "README.md"
requires-python = ">=3.7"

[tool.black]
line-length = 88
target-version = ['py37']
